# housing-market-dashboard

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: get_detail_posts.py  get_pending_posts.py
dags/common/: common.py  telegram_api.py
data/: list.csv  list_mua_ban.csv  posts_detail.csv
sql/: create_views.sql  test_queries.sql
src/hmd/core/: app_config.py
src/hmd/crawlers/: base_crawler.py  detail_page.py  list_page.py  utils.py
src/hmd/data/: base_entity.py  param_entity.py  post_entity.py
src/hmd/entity/: base_entity.py  crawl_error_entity.py  pending_post_entity.py  post_detail_entity.py  post_param_entity.py
src/hmd/jobs/: crawl_pending_posts.py  crawl_posts_detail.py
src/hmd/notebooks/: 0_crawl_list_mua_ban.ipynb  0_crawl_list_thue_nha.ipynb  1_crawl_detail_data.ipynb  2_import_data_to_mongo.ipynb  2_import_data_to_postgres.ipynb  3_explore_params.ipynb  craw_detail_page.ipynb
